--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
 
+
 # Sensitive or high-churn files:
 .idea/dataSources.ids
 .idea/dataSources.xml
@@ -30,6 +31,7 @@
 
 # IntelliJ
 /out/
+**/target/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -42,3 +44,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+
